@@ -1,3 +1,7 @@
+2005-08-28  Ben Maurer  <bmaurer@ximian.com>
+
+	* gtk/NodeSelection.cs: helper api
+
 2005-08-27  Peter Williams  <peter@newton.cx>
 
 	* gnome/Program.custom: Use a GLib.Argv in PersistentData to store
